@@ -1,5 +1,5 @@
 /* This file is part of VoltDB.
- * Copyright (C) 2008-2015 VoltDB Inc.
+ * Copyright (C) 2008-2018 VoltDB Inc.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
@@ -16,6 +16,7 @@
  */
 package org.voltdb.utils;
 
+import java.io.File;
 import java.io.FileWriter;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -23,13 +24,18 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.NavigableSet;
 import java.util.Set;
 import java.util.TreeMap;
 
 import org.voltdb.BackendTarget;
-import org.voltdb.ReplicationRole;
 import org.voltdb.StartAction;
 import org.voltdb.VoltDB;
+import org.voltdb.common.Constants;
+import org.voltdb.probe.MeshProber;
+
+import com.google_voltpatches.common.base.Joiner;
+import com.google_voltpatches.common.collect.ImmutableSortedSet;
 
 
 // VoltDB.Configuration represents all of the VoltDB command line parameters.
@@ -49,6 +55,8 @@ public class CommandLine extends VoltDB.Configuration
      * with JMX
      */
     private String m_vemTag = null;
+
+    public String m_modeOverrideForTest = null;
 
     public static final String VEM_TAG_PROPERTY = "org.voltdb.vemtag";
 
@@ -79,7 +87,6 @@ public class CommandLine extends VoltDB.Configuration
         // final in baseclass: cl.m_isEnterprise = m_isEnterprise;
         cl.m_deadHostTimeoutMS = m_deadHostTimeoutMS;
         cl.m_startMode = m_startMode;
-        cl.m_replicationRole = m_replicationRole;
         cl.m_selectedRejoinInterface = m_selectedRejoinInterface;
         cl.m_quietAdhoc = m_quietAdhoc;
         // final in baseclass: cl.m_commitLogDir = new File("/tmp");
@@ -90,6 +97,9 @@ public class CommandLine extends VoltDB.Configuration
         cl.m_versionStringOverrideForTest = m_versionStringOverrideForTest;
         cl.m_versionCompatibilityRegexOverrideForTest = m_versionCompatibilityRegexOverrideForTest;
         cl.m_buildStringOverrideForTest = m_buildStringOverrideForTest;
+        cl.m_forceVoltdbCreate = m_forceVoltdbCreate;
+        cl.m_userSchema = m_userSchema;
+        cl.m_stagedClassesPath = m_stagedClassesPath;
 
         // second, copy the derived class fields
         cl.includeTestOpts = includeTestOpts;
@@ -109,13 +119,25 @@ public class CommandLine extends VoltDB.Configuration
         cl.jmxPort = jmxPort;
         cl.jmxHost = jmxHost;
         cl.customCmdLn = customCmdLn;
+        cl.m_isPaused = m_isPaused;
+        cl.m_meshBrokers = m_meshBrokers;
+        cl.m_coordinators = ImmutableSortedSet.copyOf(m_coordinators);
+        cl.m_hostCount = m_hostCount;
+        cl.m_enableAdd = m_enableAdd;
+        cl.m_voltdbRoot = m_voltdbRoot;
+        cl.m_newCli = m_newCli;
+        cl.m_sslEnable = m_sslEnable;
+        cl.m_sslExternal = m_sslExternal;
+        cl.m_sslInternal = m_sslInternal;
+        cl.m_placementGroup = m_placementGroup;
         // deep copy the property map if it exists
         if (javaProperties != null) {
-            cl.javaProperties = new TreeMap<String, String>();
+            cl.javaProperties = new TreeMap<>();
             for (Entry<String, String> e : javaProperties.entrySet()) {
                 cl.javaProperties.put(e.getKey(), e.getValue());
             }
         }
+        cl.m_missingHostCount = m_missingHostCount;
 
         return cl;
     }
@@ -148,6 +170,10 @@ public class CommandLine extends VoltDB.Configuration
 
     public int adminPort() {
         return m_adminPort;
+    }
+
+    public int httpPort() {
+        return m_httpPort;
     }
 
     public CommandLine internalPort(int internalPort) {
@@ -188,22 +214,26 @@ public class CommandLine extends VoltDB.Configuration
         return this;
     }
 
-    public CommandLine isReplica(boolean isReplica)
-    {
-        if (isReplica)
-        {
-            m_replicationRole = ReplicationRole.REPLICA;
-        }
-        else
-        {
-            m_replicationRole = ReplicationRole.NONE;
-        }
+    public void startPaused() {
+        m_isPaused = true;
+    }
+
+    public CommandLine enableAdd(boolean enableAdd) {
+        m_enableAdd = enableAdd;
         return this;
     }
 
-    public CommandLine replicaMode(ReplicationRole replicaMode) {
-        m_replicationRole = replicaMode;
+    public CommandLine safeMode(boolean safeMode) {
+        m_safeMode = safeMode;
         return this;
+    }
+
+    public boolean safeMode() {
+        return m_safeMode;
+    }
+
+    public boolean enableAdd() {
+        return m_enableAdd;
     }
 
     public CommandLine leader(String leader)
@@ -217,6 +247,20 @@ public class CommandLine extends VoltDB.Configuration
         String hostname = MiscUtils.getHostnameFromHostnameColonPort(m_leader);
         m_leader = MiscUtils.getHostnameColonPortString(hostname, port);
         return this;
+    }
+
+    public CommandLine coordinators(String coordinators) {
+        m_coordinators = MeshProber.hosts(coordinators);
+        return this;
+    }
+
+    public CommandLine coordinators(NavigableSet<String> coordinators) {
+        m_coordinators = coordinators;
+        return this;
+    }
+
+    public NavigableSet<String> coordinators() {
+        return m_coordinators;
     }
 
     public CommandLine timestampSalt(int timestampSalt) {
@@ -266,6 +310,10 @@ public class CommandLine extends VoltDB.Configuration
         return this;
     }
 
+    public String voltRoot() {
+        return volt_root;
+    }
+
     String rmi_host_name = "";
     public CommandLine rmiHostName(String rmiHostName) {
         rmi_host_name = rmiHostName;
@@ -292,6 +340,8 @@ public class CommandLine extends VoltDB.Configuration
 
     String voltFilePrefix = "";
     public CommandLine voltFilePrefix(String voltFilePrefix) {
+        if (m_newCli) return this;
+
         this.voltFilePrefix = voltFilePrefix;
         return this;
     }
@@ -324,7 +374,8 @@ public class CommandLine extends VoltDB.Configuration
 
     public CommandLine target(BackendTarget target) {
         m_backend = target;
-        m_noLoadLibVOLTDB = (target == BackendTarget.HSQLDB_BACKEND);
+        m_noLoadLibVOLTDB = (target == BackendTarget.HSQLDB_BACKEND ||
+                             target == BackendTarget.POSTGRESQL_BACKEND);
         return this;
     }
     public BackendTarget target() {
@@ -353,6 +404,25 @@ public class CommandLine extends VoltDB.Configuration
     }
     public int drAgentStartPort() {
         return m_drAgentPortStart;
+    }
+
+    public CommandLine hostCount(int hostCount) {
+        m_hostCount = hostCount <= 0 ? VoltDB.UNDEFINED : hostCount;
+        return this;
+    }
+
+    public int hostCount() {
+        return m_hostCount;
+    }
+
+    public CommandLine voltdbRoot(String voltdbRoot) {
+        m_voltdbRoot = new VoltFile(voltdbRoot);
+        return this;
+    }
+
+    public CommandLine voltdbRoot(File voltdbRoot) {
+        m_voltdbRoot = voltdbRoot;
+        return this;
     }
 
     String javaExecutable = "java";
@@ -388,6 +458,12 @@ public class CommandLine extends VoltDB.Configuration
         return this;
     }
 
+    public CommandLine setForceVoltdbCreate(boolean forceVoltdbCreate)
+    {
+        m_forceVoltdbCreate = forceVoltdbCreate;
+        return this;
+    }
+
     // user-customizable string appeneded to commandline.
     // useful to allow customization of VEM/REST cmdlns.
     // Please don't abuse this by shoving lots of long-term
@@ -403,7 +479,7 @@ public class CommandLine extends VoltDB.Configuration
     public CommandLine setJavaProperty(String property, String value)
     {
         if (javaProperties == null) {
-            javaProperties = new TreeMap<String, String>();
+            javaProperties = new TreeMap<>();
         }
         javaProperties.put(property, value);
         return this;
@@ -452,12 +528,17 @@ public class CommandLine extends VoltDB.Configuration
 
     // Return a command line list compatible with ProcessBuilder.command()
     public List<String> createCommandLine() {
-        List<String> cmdline = new ArrayList<String>(50);
+        List<String> cmdline = new ArrayList<>(50);
         cmdline.add(javaExecutable);
         cmdline.add("-XX:+HeapDumpOnOutOfMemoryError");
         cmdline.add("-Dsun.net.inetaddr.ttl=300");
         cmdline.add("-Dsun.net.inetaddr.negative.ttl=3600");
         cmdline.add("-Djava.library.path=" + java_library_path);
+        /*
+         * Facilitate SPNEGO (Kerberos HTTP) authentication
+         */
+        cmdline.add("-Djavax.security.auth.useSubjectCredsOnly=false");
+
         if (rmi_host_name != null)
             cmdline.add("-Djava.rmi.server.hostname=" + rmi_host_name);
         cmdline.add("-Dlog4j.configuration=" + log4j);
@@ -475,7 +556,6 @@ public class CommandLine extends VoltDB.Configuration
         cmdline.add("-XX:CMSInitiatingOccupancyFraction=75");
         cmdline.add("-XX:+UseCMSInitiatingOccupancyOnly");
         cmdline.add("-XX:+CMSClassUnloadingEnabled");
-        cmdline.add("-XX:PermSize=64m");
 
         /*
          * Have RMI not invoke System.gc constantly
@@ -503,10 +583,11 @@ public class CommandLine extends VoltDB.Configuration
         if (includeTestOpts)
         {
             cmdline.add("-DLOG_SEGMENT_SIZE=8");
-            cmdline.add("-DVoltFilePrefix=" + voltFilePrefix);
+            if (!m_newCli) {
+                cmdline.add("-DVoltFilePrefix=" + voltFilePrefix);
+            }
             cmdline.add("-ea");
             cmdline.add("-XX:MaxDirectMemorySize=2g");
-            cmdline.add("-XX:-UseSplitVerifier");
         }
         else
         {
@@ -524,6 +605,15 @@ public class CommandLine extends VoltDB.Configuration
             cmdline.add("-Dvolt.rmi.server.hostname=" + jmxHost);
         }
 
+        // add default keystore, truststore
+        if (m_sslEnable) {
+            cmdline.add("-Djavax.net.ssl.keyStore=tests/frontend/org/voltdb/keystore");
+            cmdline.add("-Djavax.net.ssl.keyStorePassword=password");
+            cmdline.add("-Djavax.net.ssl.trustStore=tests/frontend/org/voltdb/keystore");
+            cmdline.add("-Djavax.net.ssl.trustStorePassword=password");
+        }
+
+
         if (javaProperties != null) {
             for (Entry<String, String> e : javaProperties.entrySet()) {
                 if (e.getValue() != null) {
@@ -539,13 +629,16 @@ public class CommandLine extends VoltDB.Configuration
             cmdline.add("-Xdebug");
             cmdline.add("-agentlib:jdwp=transport=dt_socket,address=" + debugPort + ",server=y,suspend=n");
         }
+
+
         //
         // Process JVM options passed through the VOLTDB_OPTS environment variable
         //
-        List<String> additionalJvmOptions = new ArrayList<String>();
+        List<String> additionalJvmOptions = new ArrayList<>();
         String nonJvmOptions = AdditionalJvmOptionsProcessor
                 .getJvmOptionsFromVoltDbOptsEnvironmentVariable(additionalJvmOptions);
         cmdline.addAll(additionalJvmOptions);
+
 
         //
         // VOLTDB main() parameters
@@ -553,17 +646,38 @@ public class CommandLine extends VoltDB.Configuration
         cmdline.add("org.voltdb.VoltDB");
         cmdline.add(m_startAction.verb());
 
-        cmdline.add("host"); cmdline.add(m_leader);
+        if (m_startAction == StartAction.PROBE && m_safeMode) {
+            cmdline.add("safemode");
+        }
+
+        if (m_startAction == StartAction.PROBE && m_enableAdd) {
+            cmdline.add("enableadd");
+        }
+
+        if (m_sslEnable) {
+            cmdline.add("enableSSL");
+        }
+
+        if (m_sslExternal) {
+            cmdline.add("externalSSL");
+        }
+
+        if (m_sslInternal) {
+            cmdline.add("internalSSL");
+        }
+
+        cmdline.add("host");
+        if (!m_coordinators.isEmpty()) {
+            cmdline.add(Joiner.on(',').skipNulls().join(m_coordinators));
+        } else {
+            cmdline.add(m_leader);
+        }
         if (jarFileName() != null) {
             cmdline.add("catalog"); cmdline.add(jarFileName());
         }
-        cmdline.add("deployment"); cmdline.add(pathToDeployment());
-
-        // rejoin has no replication role
-        if (!m_startAction.doesRejoin()) {
-            if (m_replicationRole == ReplicationRole.REPLICA) {
-                cmdline.add("replica");
-            }
+        //Add deployment if its not probe
+        if (pathToDeployment() != null && m_startAction != StartAction.PROBE) {
+            cmdline.add("deployment"); cmdline.add(pathToDeployment());
         }
 
         if (includeTestOpts)
@@ -599,9 +713,21 @@ public class CommandLine extends VoltDB.Configuration
         {
             cmdline.add("externalinterface"); cmdline.add(m_externalInterface);
         }
+        if (m_httpPort != Constants.HTTP_PORT_DISABLED) {
+            cmdline.add("httpport"); cmdline.add(Integer.toString(m_httpPort));
+        }
+
+        if (m_forceVoltdbCreate)
+        {
+            cmdline.add("force");
+        }
 
         if (m_isEnterprise) {
             cmdline.add("license"); cmdline.add(m_pathToLicense);
+        }
+
+        if (m_userSchema != null) {
+            cmdline.add("schema"); cmdline.add(m_userSchema.getAbsolutePath());
         }
 
         if (customCmdLn != null && !customCmdLn.trim().isEmpty())
@@ -626,6 +752,10 @@ public class CommandLine extends VoltDB.Configuration
             cmdline.add("ipc");
         }
 
+        if (m_tag != null) {
+            cmdline.add("tag"); cmdline.add(m_tag);
+        }
+
         // handle overrides for testing hotfix version compatibility
         if (m_versionStringOverrideForTest != null) {
             assert(m_versionCompatibilityRegexOverrideForTest != null);
@@ -637,11 +767,32 @@ public class CommandLine extends VoltDB.Configuration
                 cmdline.add(m_buildStringOverrideForTest);
             }
         }
-
-        if (m_tag != null) {
-            cmdline.add("tag"); cmdline.add(m_tag);
+        if (m_isPaused || (m_modeOverrideForTest != null && m_modeOverrideForTest.equalsIgnoreCase("paused")) ) {
+            cmdline.add("paused");
         }
 
+        if (m_sitesperhost != VoltDB.UNDEFINED) {
+            cmdline.add("sitesperhost");
+            cmdline.add(Integer.toString(m_sitesperhost));
+        }
+
+        //Add mesh and hostcount for probe only.
+        if (m_startAction == StartAction.PROBE) {
+            cmdline.add("mesh"); cmdline.add(Joiner.on(',').skipNulls().join(m_coordinators));
+            cmdline.add("hostcount"); cmdline.add(Integer.toString(m_hostCount));
+        }
+
+        if (!m_startAction.isLegacy()) {
+            cmdline.add("voltdbroot"); cmdline.add(m_voltdbRoot.getPath());
+        }
+
+        if (m_placementGroup != null) {
+            cmdline.add("placementgroup"); cmdline.add(m_placementGroup);
+        }
+
+        if ( m_missingHostCount > 0) {
+            cmdline.add("missing"); cmdline.add(Integer.toString(m_missingHostCount));
+        }
         return cmdline;
     }
 
@@ -699,7 +850,7 @@ public class CommandLine extends VoltDB.Configuration
          * @return an argument array representing the specified command line.
          */
         public static String[] tokenize(String commandLine) {
-            List<String> resultBuffer = new java.util.ArrayList<String>();
+            List<String> resultBuffer = new java.util.ArrayList<>();
 
             if (commandLine != null) {
                 int z = commandLine.length();
@@ -762,7 +913,7 @@ public class CommandLine extends VoltDB.Configuration
         /**
          * Options which may not be specified in VOLTDB_OPTS
          */
-        static final Set<String> mayNotSpecify = new HashSet<String>(
+        static final Set<String> mayNotSpecify = new HashSet<>(
                 Arrays.<String>asList(
                         "-cp",
                         "-classpath",
@@ -779,7 +930,7 @@ public class CommandLine extends VoltDB.Configuration
          * Options that may be otherwise specified though documented
          * VoltDB options
          */
-        static final Set<String> mayOtherwiseSpecify = new HashSet<String>(
+        static final Set<String> mayOtherwiseSpecify = new HashSet<>(
                 Arrays.<String>asList(
                         "-Dlog4j.configuration",
                         "-Xm",
@@ -791,7 +942,7 @@ public class CommandLine extends VoltDB.Configuration
         /**
          * Options that have a follow up that needs to be also ignored
          */
-        static final Set<String> requiresSkipNext = new HashSet<String>(
+        static final Set<String> requiresSkipNext = new HashSet<>(
                 Arrays.<String>asList(
                         "-cp",
                         "-classpath"
@@ -847,7 +998,7 @@ public class CommandLine extends VoltDB.Configuration
             }
 
             boolean skipNext = false;
-            List<String> nonJvmOptions = new ArrayList<String>();
+            List<String> nonJvmOptions = new ArrayList<>();
 
             for( String option: CommandLineTokenizer.tokenize(voltDbOpts)) {
                 if( skipNext) {
@@ -901,4 +1052,20 @@ public class CommandLine extends VoltDB.Configuration
         }
     }
 
+    boolean m_newCli = false;
+    //Return true if we are going to run init and start.
+    boolean isNewCli() {
+        return m_newCli;
+    }
+    public void setNewCli(boolean flag) { m_newCli = flag; };
+
+    String m_placementGroup = "";
+    public void setPlacementGroup(String placementGroup) {
+        m_placementGroup = placementGroup;
+    }
+
+    int m_missingHostCount = 0;
+    public void setMissingHostCount(int missingHostCount) {
+        this.m_missingHostCount = missingHostCount;
+    }
 }
